// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Radio Group variants: Multiple Radio Button 1`] = `
<styled.div>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-fMiknA",
          "isStatic": true,
          "lastClassName": "dfVBhB",
          "rules": Array [
            "
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
",
          ],
        },
        "displayName": "styled.div",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-fMiknA",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="sc-fMiknA dfVBhB"
    >
      <styled.div
        key="0"
      >
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-fBuWsC",
                "isStatic": true,
                "lastClassName": "doOhiN",
                "rules": Array [
                  "
  display: inline-flex;
  align-items: center;
  vertical-align: middle;
  margin-right: 20px;
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-fBuWsC",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="sc-fBuWsC doOhiN"
          >
            <Checkbox
              checked={true}
              name="multiple"
              onChange={[Function]}
              type="radio"
              value={1}
            >
              <styled.label>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-VigVT",
                        "isStatic": true,
                        "lastClassName": "gnCnbN",
                        "rules": Array [
                          "
  position: relative;
  display: flex;
  align-items: center;
  min-width: 0;
  margin-bottom: 0;
  text-align: left;
  cursor: pointer;
",
                        ],
                      },
                      "displayName": "styled.label",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-VigVT",
                      "target": "label",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <label
                    className="sc-VigVT gnCnbN"
                  >
                    <styled.div>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "sc-gqjmRU",
                              "isStatic": true,
                              "lastClassName": "dqXpYh",
                              "rules": Array [
                                "
  flex: 0 0 auto;
  min-width: 0;
  margin-right: 10px;
  padding: 4px;
  padding-left: 0;
  color: #8da2b5;
  span {
    box-shadow: none !important;
  }
",
                              ],
                            },
                            "displayName": "styled.div",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "sc-gqjmRU",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="sc-gqjmRU dqXpYh"
                        >
                          <styled.input
                            checked={true}
                            color="#5d9df5"
                            name="multiple"
                            onChange={[Function]}
                            type="radio"
                            value={1}
                          >
                            <StyledComponent
                              checked={true}
                              color="#5d9df5"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "sc-gZMcBi",
                                    "isStatic": false,
                                    "lastClassName": "bJWspH",
                                    "rules": Array [
                                      "
  ",
                                      [Function],
                                      "
  position: absolute;
  cursor: pointer;
  opacity: 0;

  :focus ~ ",
                                      ".sc-bxivhb",
                                      " {
    display: block;
    border-radius: 4px;
    box-shadow: 0px 2px 6px rgba(17, 49, 96, 0.24), 0px 0px 0px rgba(17, 49, 96, 0.04);
  }
  :hover ~ ",
                                      ".sc-bxivhb",
                                      " {
    color: ",
                                      [Function],
                                      ";
  }
",
                                    ],
                                  },
                                  "displayName": "styled.input",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "sc-gZMcBi",
                                  "target": "input",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                              name="multiple"
                              onChange={[Function]}
                              type="radio"
                              value={1}
                            >
                              <input
                                checked={true}
                                className="sc-gZMcBi bJWspH"
                                color="#5d9df5"
                                name="multiple"
                                onChange={[Function]}
                                type="radio"
                                value={1}
                              />
                            </StyledComponent>
                          </styled.input>
                          <ForwardRef
                            checked={true}
                            color="#5d9df5"
                            icon="checked"
                            size={16}
                          >
                            <styled.span
                              checked={true}
                              color="#5d9df5"
                              size={16}
                            >
                              <StyledComponent
                                checked={true}
                                color="#5d9df5"
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "sc-bxivhb",
                                      "isStatic": false,
                                      "lastClassName": "kwqhZm",
                                      "rules": Array [
                                        "
  ",
                                        [Function],
                                        "

  color: ",
                                        [Function],
                                        ";
  width: ",
                                        [Function],
                                        "px;
  height: ",
                                        [Function],
                                        "px;
  box-sizing: content-box;
  
  ",
                                        [Function],
                                        "

  & > svg {
    display: block;
    width: inherit;
    height: inherit;

  }

  &:hover,
  &:active {
    color: ",
                                        [Function],
                                        ";

  }
",
                                      ],
                                    },
                                    "displayName": "styled.span",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "sc-bxivhb",
                                    "target": "span",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                                size={16}
                              >
                                <span
                                  checked={true}
                                  className="sc-bxivhb kwqhZm"
                                  color="#5d9df5"
                                  size={16}
                                >
                                  <test-file-stub />
                                </span>
                              </StyledComponent>
                            </styled.span>
                          </ForwardRef>
                        </div>
                      </StyledComponent>
                    </styled.div>
                    <div>
                      Option 1
                    </div>
                  </label>
                </StyledComponent>
              </styled.label>
            </Checkbox>
          </div>
        </StyledComponent>
      </styled.div>
      <styled.div
        key="1"
      >
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-fBuWsC",
                "isStatic": true,
                "lastClassName": "doOhiN",
                "rules": Array [
                  "
  display: inline-flex;
  align-items: center;
  vertical-align: middle;
  margin-right: 20px;
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-fBuWsC",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="sc-fBuWsC doOhiN"
          >
            <Checkbox
              checked={false}
              name="multiple"
              onChange={[Function]}
              type="radio"
              value={2}
            >
              <styled.label>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-VigVT",
                        "isStatic": true,
                        "lastClassName": "gnCnbN",
                        "rules": Array [
                          "
  position: relative;
  display: flex;
  align-items: center;
  min-width: 0;
  margin-bottom: 0;
  text-align: left;
  cursor: pointer;
",
                        ],
                      },
                      "displayName": "styled.label",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-VigVT",
                      "target": "label",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <label
                    className="sc-VigVT gnCnbN"
                  >
                    <styled.div>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "sc-gqjmRU",
                              "isStatic": true,
                              "lastClassName": "dqXpYh",
                              "rules": Array [
                                "
  flex: 0 0 auto;
  min-width: 0;
  margin-right: 10px;
  padding: 4px;
  padding-left: 0;
  color: #8da2b5;
  span {
    box-shadow: none !important;
  }
",
                              ],
                            },
                            "displayName": "styled.div",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "sc-gqjmRU",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="sc-gqjmRU dqXpYh"
                        >
                          <styled.input
                            checked={false}
                            color="#5d9df5"
                            name="multiple"
                            onChange={[Function]}
                            type="radio"
                            value={2}
                          >
                            <StyledComponent
                              checked={false}
                              color="#5d9df5"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "sc-gZMcBi",
                                    "isStatic": false,
                                    "lastClassName": "bJWspH",
                                    "rules": Array [
                                      "
  ",
                                      [Function],
                                      "
  position: absolute;
  cursor: pointer;
  opacity: 0;

  :focus ~ ",
                                      ".sc-bxivhb",
                                      " {
    display: block;
    border-radius: 4px;
    box-shadow: 0px 2px 6px rgba(17, 49, 96, 0.24), 0px 0px 0px rgba(17, 49, 96, 0.04);
  }
  :hover ~ ",
                                      ".sc-bxivhb",
                                      " {
    color: ",
                                      [Function],
                                      ";
  }
",
                                    ],
                                  },
                                  "displayName": "styled.input",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "sc-gZMcBi",
                                  "target": "input",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                              name="multiple"
                              onChange={[Function]}
                              type="radio"
                              value={2}
                            >
                              <input
                                checked={false}
                                className="sc-gZMcBi bJWspH"
                                color="#5d9df5"
                                name="multiple"
                                onChange={[Function]}
                                type="radio"
                                value={2}
                              />
                            </StyledComponent>
                          </styled.input>
                          <ForwardRef
                            checked={false}
                            color="#5d9df5"
                            icon="emptyCheckbox"
                            size={16}
                          >
                            <styled.span
                              checked={false}
                              color="#5d9df5"
                              size={16}
                            >
                              <StyledComponent
                                checked={false}
                                color="#5d9df5"
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "sc-bxivhb",
                                      "isStatic": false,
                                      "lastClassName": "kwqhZm",
                                      "rules": Array [
                                        "
  ",
                                        [Function],
                                        "

  color: ",
                                        [Function],
                                        ";
  width: ",
                                        [Function],
                                        "px;
  height: ",
                                        [Function],
                                        "px;
  box-sizing: content-box;
  
  ",
                                        [Function],
                                        "

  & > svg {
    display: block;
    width: inherit;
    height: inherit;

  }

  &:hover,
  &:active {
    color: ",
                                        [Function],
                                        ";

  }
",
                                      ],
                                    },
                                    "displayName": "styled.span",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "sc-bxivhb",
                                    "target": "span",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                                size={16}
                              >
                                <span
                                  checked={false}
                                  className="sc-bxivhb kwqhZm"
                                  color="#5d9df5"
                                  size={16}
                                >
                                  <test-file-stub />
                                </span>
                              </StyledComponent>
                            </styled.span>
                          </ForwardRef>
                        </div>
                      </StyledComponent>
                    </styled.div>
                    <div>
                      Option 2
                    </div>
                  </label>
                </StyledComponent>
              </styled.label>
            </Checkbox>
          </div>
        </StyledComponent>
      </styled.div>
      <styled.div
        key="2"
      >
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-fBuWsC",
                "isStatic": true,
                "lastClassName": "doOhiN",
                "rules": Array [
                  "
  display: inline-flex;
  align-items: center;
  vertical-align: middle;
  margin-right: 20px;
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-fBuWsC",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="sc-fBuWsC doOhiN"
          >
            <Checkbox
              checked={false}
              name="multiple"
              onChange={[Function]}
              type="radio"
              value={3}
            >
              <styled.label>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-VigVT",
                        "isStatic": true,
                        "lastClassName": "gnCnbN",
                        "rules": Array [
                          "
  position: relative;
  display: flex;
  align-items: center;
  min-width: 0;
  margin-bottom: 0;
  text-align: left;
  cursor: pointer;
",
                        ],
                      },
                      "displayName": "styled.label",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-VigVT",
                      "target": "label",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <label
                    className="sc-VigVT gnCnbN"
                  >
                    <styled.div>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "sc-gqjmRU",
                              "isStatic": true,
                              "lastClassName": "dqXpYh",
                              "rules": Array [
                                "
  flex: 0 0 auto;
  min-width: 0;
  margin-right: 10px;
  padding: 4px;
  padding-left: 0;
  color: #8da2b5;
  span {
    box-shadow: none !important;
  }
",
                              ],
                            },
                            "displayName": "styled.div",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "sc-gqjmRU",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="sc-gqjmRU dqXpYh"
                        >
                          <styled.input
                            checked={false}
                            color="#5d9df5"
                            name="multiple"
                            onChange={[Function]}
                            type="radio"
                            value={3}
                          >
                            <StyledComponent
                              checked={false}
                              color="#5d9df5"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "sc-gZMcBi",
                                    "isStatic": false,
                                    "lastClassName": "bJWspH",
                                    "rules": Array [
                                      "
  ",
                                      [Function],
                                      "
  position: absolute;
  cursor: pointer;
  opacity: 0;

  :focus ~ ",
                                      ".sc-bxivhb",
                                      " {
    display: block;
    border-radius: 4px;
    box-shadow: 0px 2px 6px rgba(17, 49, 96, 0.24), 0px 0px 0px rgba(17, 49, 96, 0.04);
  }
  :hover ~ ",
                                      ".sc-bxivhb",
                                      " {
    color: ",
                                      [Function],
                                      ";
  }
",
                                    ],
                                  },
                                  "displayName": "styled.input",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "sc-gZMcBi",
                                  "target": "input",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                              name="multiple"
                              onChange={[Function]}
                              type="radio"
                              value={3}
                            >
                              <input
                                checked={false}
                                className="sc-gZMcBi bJWspH"
                                color="#5d9df5"
                                name="multiple"
                                onChange={[Function]}
                                type="radio"
                                value={3}
                              />
                            </StyledComponent>
                          </styled.input>
                          <ForwardRef
                            checked={false}
                            color="#5d9df5"
                            icon="emptyCheckbox"
                            size={16}
                          >
                            <styled.span
                              checked={false}
                              color="#5d9df5"
                              size={16}
                            >
                              <StyledComponent
                                checked={false}
                                color="#5d9df5"
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "sc-bxivhb",
                                      "isStatic": false,
                                      "lastClassName": "kwqhZm",
                                      "rules": Array [
                                        "
  ",
                                        [Function],
                                        "

  color: ",
                                        [Function],
                                        ";
  width: ",
                                        [Function],
                                        "px;
  height: ",
                                        [Function],
                                        "px;
  box-sizing: content-box;
  
  ",
                                        [Function],
                                        "

  & > svg {
    display: block;
    width: inherit;
    height: inherit;

  }

  &:hover,
  &:active {
    color: ",
                                        [Function],
                                        ";

  }
",
                                      ],
                                    },
                                    "displayName": "styled.span",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "sc-bxivhb",
                                    "target": "span",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                                size={16}
                              >
                                <span
                                  checked={false}
                                  className="sc-bxivhb kwqhZm"
                                  color="#5d9df5"
                                  size={16}
                                >
                                  <test-file-stub />
                                </span>
                              </StyledComponent>
                            </styled.span>
                          </ForwardRef>
                        </div>
                      </StyledComponent>
                    </styled.div>
                    <div>
                      Option 3
                    </div>
                  </label>
                </StyledComponent>
              </styled.label>
            </Checkbox>
          </div>
        </StyledComponent>
      </styled.div>
    </div>
  </StyledComponent>
</styled.div>
`;

exports[`Storyshots Radio Group variants: Yes No Radio Button 1`] = `
<styled.div>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-fMiknA",
          "isStatic": true,
          "lastClassName": "dfVBhB",
          "rules": Array [
            "
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
",
          ],
        },
        "displayName": "styled.div",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-fMiknA",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="sc-fMiknA dfVBhB"
    >
      <styled.div
        key="0"
      >
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-fBuWsC",
                "isStatic": true,
                "lastClassName": "doOhiN",
                "rules": Array [
                  "
  display: inline-flex;
  align-items: center;
  vertical-align: middle;
  margin-right: 20px;
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-fBuWsC",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="sc-fBuWsC doOhiN"
          >
            <Checkbox
              checked={false}
              name="yesNo"
              onChange={[Function]}
              type="radio"
              value={true}
            >
              <styled.label>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-VigVT",
                        "isStatic": true,
                        "lastClassName": "gnCnbN",
                        "rules": Array [
                          "
  position: relative;
  display: flex;
  align-items: center;
  min-width: 0;
  margin-bottom: 0;
  text-align: left;
  cursor: pointer;
",
                        ],
                      },
                      "displayName": "styled.label",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-VigVT",
                      "target": "label",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <label
                    className="sc-VigVT gnCnbN"
                  >
                    <styled.div>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "sc-gqjmRU",
                              "isStatic": true,
                              "lastClassName": "dqXpYh",
                              "rules": Array [
                                "
  flex: 0 0 auto;
  min-width: 0;
  margin-right: 10px;
  padding: 4px;
  padding-left: 0;
  color: #8da2b5;
  span {
    box-shadow: none !important;
  }
",
                              ],
                            },
                            "displayName": "styled.div",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "sc-gqjmRU",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="sc-gqjmRU dqXpYh"
                        >
                          <styled.input
                            checked={false}
                            color="#5d9df5"
                            name="yesNo"
                            onChange={[Function]}
                            type="radio"
                            value={true}
                          >
                            <StyledComponent
                              checked={false}
                              color="#5d9df5"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "sc-gZMcBi",
                                    "isStatic": false,
                                    "lastClassName": "bJWspH",
                                    "rules": Array [
                                      "
  ",
                                      [Function],
                                      "
  position: absolute;
  cursor: pointer;
  opacity: 0;

  :focus ~ ",
                                      ".sc-bxivhb",
                                      " {
    display: block;
    border-radius: 4px;
    box-shadow: 0px 2px 6px rgba(17, 49, 96, 0.24), 0px 0px 0px rgba(17, 49, 96, 0.04);
  }
  :hover ~ ",
                                      ".sc-bxivhb",
                                      " {
    color: ",
                                      [Function],
                                      ";
  }
",
                                    ],
                                  },
                                  "displayName": "styled.input",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "sc-gZMcBi",
                                  "target": "input",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                              name="yesNo"
                              onChange={[Function]}
                              type="radio"
                              value={true}
                            >
                              <input
                                checked={false}
                                className="sc-gZMcBi bJWspH"
                                color="#5d9df5"
                                name="yesNo"
                                onChange={[Function]}
                                type="radio"
                                value={true}
                              />
                            </StyledComponent>
                          </styled.input>
                          <ForwardRef
                            checked={false}
                            color="#5d9df5"
                            icon="emptyCheckbox"
                            size={16}
                          >
                            <styled.span
                              checked={false}
                              color="#5d9df5"
                              size={16}
                            >
                              <StyledComponent
                                checked={false}
                                color="#5d9df5"
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "sc-bxivhb",
                                      "isStatic": false,
                                      "lastClassName": "kwqhZm",
                                      "rules": Array [
                                        "
  ",
                                        [Function],
                                        "

  color: ",
                                        [Function],
                                        ";
  width: ",
                                        [Function],
                                        "px;
  height: ",
                                        [Function],
                                        "px;
  box-sizing: content-box;
  
  ",
                                        [Function],
                                        "

  & > svg {
    display: block;
    width: inherit;
    height: inherit;

  }

  &:hover,
  &:active {
    color: ",
                                        [Function],
                                        ";

  }
",
                                      ],
                                    },
                                    "displayName": "styled.span",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "sc-bxivhb",
                                    "target": "span",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                                size={16}
                              >
                                <span
                                  checked={false}
                                  className="sc-bxivhb kwqhZm"
                                  color="#5d9df5"
                                  size={16}
                                >
                                  <test-file-stub />
                                </span>
                              </StyledComponent>
                            </styled.span>
                          </ForwardRef>
                        </div>
                      </StyledComponent>
                    </styled.div>
                    <div>
                      Yes
                    </div>
                  </label>
                </StyledComponent>
              </styled.label>
            </Checkbox>
          </div>
        </StyledComponent>
      </styled.div>
      <styled.div
        key="1"
      >
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-fBuWsC",
                "isStatic": true,
                "lastClassName": "doOhiN",
                "rules": Array [
                  "
  display: inline-flex;
  align-items: center;
  vertical-align: middle;
  margin-right: 20px;
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-fBuWsC",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="sc-fBuWsC doOhiN"
          >
            <Checkbox
              checked={true}
              name="yesNo"
              onChange={[Function]}
              type="radio"
              value={false}
            >
              <styled.label>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-VigVT",
                        "isStatic": true,
                        "lastClassName": "gnCnbN",
                        "rules": Array [
                          "
  position: relative;
  display: flex;
  align-items: center;
  min-width: 0;
  margin-bottom: 0;
  text-align: left;
  cursor: pointer;
",
                        ],
                      },
                      "displayName": "styled.label",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-VigVT",
                      "target": "label",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <label
                    className="sc-VigVT gnCnbN"
                  >
                    <styled.div>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "sc-gqjmRU",
                              "isStatic": true,
                              "lastClassName": "dqXpYh",
                              "rules": Array [
                                "
  flex: 0 0 auto;
  min-width: 0;
  margin-right: 10px;
  padding: 4px;
  padding-left: 0;
  color: #8da2b5;
  span {
    box-shadow: none !important;
  }
",
                              ],
                            },
                            "displayName": "styled.div",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "sc-gqjmRU",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="sc-gqjmRU dqXpYh"
                        >
                          <styled.input
                            checked={true}
                            color="#5d9df5"
                            name="yesNo"
                            onChange={[Function]}
                            type="radio"
                            value={false}
                          >
                            <StyledComponent
                              checked={true}
                              color="#5d9df5"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "sc-gZMcBi",
                                    "isStatic": false,
                                    "lastClassName": "bJWspH",
                                    "rules": Array [
                                      "
  ",
                                      [Function],
                                      "
  position: absolute;
  cursor: pointer;
  opacity: 0;

  :focus ~ ",
                                      ".sc-bxivhb",
                                      " {
    display: block;
    border-radius: 4px;
    box-shadow: 0px 2px 6px rgba(17, 49, 96, 0.24), 0px 0px 0px rgba(17, 49, 96, 0.04);
  }
  :hover ~ ",
                                      ".sc-bxivhb",
                                      " {
    color: ",
                                      [Function],
                                      ";
  }
",
                                    ],
                                  },
                                  "displayName": "styled.input",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "sc-gZMcBi",
                                  "target": "input",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                              name="yesNo"
                              onChange={[Function]}
                              type="radio"
                              value={false}
                            >
                              <input
                                checked={true}
                                className="sc-gZMcBi bJWspH"
                                color="#5d9df5"
                                name="yesNo"
                                onChange={[Function]}
                                type="radio"
                                value={false}
                              />
                            </StyledComponent>
                          </styled.input>
                          <ForwardRef
                            checked={true}
                            color="#5d9df5"
                            icon="checked"
                            size={16}
                          >
                            <styled.span
                              checked={true}
                              color="#5d9df5"
                              size={16}
                            >
                              <StyledComponent
                                checked={true}
                                color="#5d9df5"
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "sc-bxivhb",
                                      "isStatic": false,
                                      "lastClassName": "kwqhZm",
                                      "rules": Array [
                                        "
  ",
                                        [Function],
                                        "

  color: ",
                                        [Function],
                                        ";
  width: ",
                                        [Function],
                                        "px;
  height: ",
                                        [Function],
                                        "px;
  box-sizing: content-box;
  
  ",
                                        [Function],
                                        "

  & > svg {
    display: block;
    width: inherit;
    height: inherit;

  }

  &:hover,
  &:active {
    color: ",
                                        [Function],
                                        ";

  }
",
                                      ],
                                    },
                                    "displayName": "styled.span",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "sc-bxivhb",
                                    "target": "span",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                                size={16}
                              >
                                <span
                                  checked={true}
                                  className="sc-bxivhb kwqhZm"
                                  color="#5d9df5"
                                  size={16}
                                >
                                  <test-file-stub />
                                </span>
                              </StyledComponent>
                            </styled.span>
                          </ForwardRef>
                        </div>
                      </StyledComponent>
                    </styled.div>
                    <div>
                      No
                    </div>
                  </label>
                </StyledComponent>
              </styled.label>
            </Checkbox>
          </div>
        </StyledComponent>
      </styled.div>
    </div>
  </StyledComponent>
</styled.div>
`;
